--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "plain-typescript",
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "main": "npx ts-node scripts/main.ts"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.2",
