--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "zod": "^3.21.4"
   }
 }
