--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "plain-typescript",
   "scripts": {
     "format": "prettier --write .",
-    "main": "npx ts-node scripts/main.ts"
+    "main": "npx ts-node scripts/main.ts",
+    "lint": "npx eslint \"src/**/*.ts\"",
+    "lint:fix": "npx eslint \"src/**/*.ts\" --fix"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.40.0",
+    "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
