add "dot-notation": "warn"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    // JavaScript
+    "dot-notation": "warn"
+  }
 }
