feat: update format, remove some packages

--- a/package.json
+++ b/package.json
@@ -2,24 +2,11 @@
   "name": "plain-typescript",
   "scripts": {
     "format": "prettier --write .",
-    "main": "npx ts-node scripts/main.ts",
-    "lint": "npx eslint \"src/**/*.ts\"",
-    "lint:fix": "npx eslint \"src/**/*.ts\" --fix"
+    "main": "npx ts-node scripts/main.ts"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.194",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
-    "lodash": "^4.17.21",
-    "zod": "^3.21.4"
+    "typescript": "^5.6.3"
   }
 }
